# fitness-tracker

./: .gitignore  Cargo.toml  README.md  db.sqlite  goal.yml
migrations/: 20260205144140_workout_tables.sql
src/: lib.rs  main.rs  state.rs
src/domain/traits/: exercise_model.rs  mod.rs  workout_model.rs  workout_template_model.rs
src/domain/types/: exercise.rs  goal.rs  mod.rs  workout.rs  workout_plan.rs  workout_template.rs
src/inbound/: mod.rs  server.rs
src/inbound/backend_routes/: mod.rs
src/inbound/backend_routes/workout/: mod.rs  workout_create.rs
src/inbound/frontend_routes/: mod.rs  new_workout.rs
src/outbound/: exercise_repository.rs  mod.rs  workout_plan_repository.rs  workout_repository.rs  workout_template_repository.rs
src/outbound/utils/: read_file.rs
src/pages/: mod.rs  new_workout.rs
src/types/: goal.rs  mod.rs  workout.rs  workout_plan.rs
src/utils/: read_file.rs
templates/: new_workout.html
