[package]
name = "sport_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.4"
askama_web = { version = "0.15.1", features = ["axum-0.8"] }
axum = "0.8.8"
tokio = { version = "1.36.0", features = ["full"] }
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
tower-http = { version = "0.6.8", features = ["full"] }
tower = "0.5.3"
sqlx = { version = "0.8.6", features = [ "sqlite", "runtime-tokio-rustls", "uuid", "chrono", "json", "migrate", "macros"] }
async-trait = "0.1.89"
